--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@ body{
     font-size: 48px;
     font-weight: bold;
 }
-
+.btn-AC{
+    background-color: lightblue;
+}
 .container{
     display: flex;
     flex-direction: column;
@@ -47,8 +49,6 @@ body{
 .display{
     background-color: white;
     color: black;
-    padding: 0;
-    margin: 0;
     width: 97%;
 }
 
@@ -69,7 +69,12 @@ button{
     min-width: 150px;
 }
 
-button:hover{
-    background-color: yellow;
+/* button:hover{
+    background-color: #3e8e41;
+} */
+button:active{
+    background-color: lightcoral;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
 
