--- a/style.css
+++ b/style.css
@@ -5,16 +5,18 @@ body{
     display: flex;
     flex-direction: column;
     flex: 1;
-    background-color: white;
+    background-color: azure;
     justify-content: center;
     align-items: center; 
 }
 
 .heading-text{
-    color: white;
+    display: flex;
+    color: black;
     text-align: center;
     font-size: 48px;
     font-weight: bold;
+    flex: 1;
 }
 .btn-AC{
     background-color: lightblue;
@@ -27,12 +29,14 @@ body{
     gap: 12px;
     background-color: black;
     padding-top: 12px;
+    border-radius: 12px;
+  
 }
 
 .calculator{
     display: flex;
-    padding: 9px;
-
+    padding: 12px;
+    
 }
 
 .btn-zero{
@@ -47,9 +51,9 @@ body{
 }
 
 .display{
-    background-color: white;
-    color: black;
-    width: 97%;
+    background-color: rgb(38,40,44);
+    color: white;
+    width: 95%;
 }
 
 .text-dummy{
@@ -67,14 +71,23 @@ button{
     font-weight: bold;
     text-align: center;
     min-width: 150px;
+    color: white;
 }
 
 /* button:hover{
     background-color: #3e8e41;
 } */
 button:active{
-    background-color: lightcoral;
+    background-color: rgb(203,125,8);
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
 
+
+.footer-text{
+    color: black;
+    display: flex;
+    flex: 1;
+    justify-content: end;
+    align-items: end;
+}
